Implementando o app no Firebase Hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,39 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"cardapio-restaurante-e57df","appId":"1:831638446592:android:8828daf453c4567fb36ee5","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"cardapio-restaurante-e57df","configurations":{"android":"1:831638446592:android:8828daf453c4567fb36ee5","ios":"1:831638446592:ios:5c92ce485ff23ca6b36ee5","macos":"1:831638446592:ios:5c92ce485ff23ca6b36ee5","web":"1:831638446592:web:88e1043469fcdbfeb36ee5","windows":"1:831638446592:web:6cf202c3c314935eb36ee5"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "cardapio-restaurante-e57df",
+          "appId": "1:831638446592:android:8828daf453c4567fb36ee5",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "cardapio-restaurante-e57df",
+          "configurations": {
+            "android": "1:831638446592:android:8828daf453c4567fb36ee5",
+            "ios": "1:831638446592:ios:5c92ce485ff23ca6b36ee5",
+            "macos": "1:831638446592:ios:5c92ce485ff23ca6b36ee5",
+            "web": "1:831638446592:web:88e1043469fcdbfeb36ee5",
+            "windows": "1:831638446592:web:6cf202c3c314935eb36ee5"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
